# cpp-latest-template

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  Doxyfile  readme.md
.github/workflows/: check-format.yml  generate-doxygen.yml
core/: CMakeLists.txt  main.cpp
docs/: dir_000000_000001.html  dir_000002_000001.html  dir_4270bfced15e0e73154b13468c7c9ad9.html  dir_4270bfced15e0e73154b13468c7c9ad9.js  dir_4270bfced15e0e73154b13468c7c9ad9_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  globals.html  globals_func.html  graph_legend.html  index.html  main_8cpp.html  main_8cpp.js  main_8cpp_a8216c1645620cdb2f629cde3ac02ffef.html  main_8cpp_source.html  navtreedata.js  readme_8md.html  template_8cpp.html  template_8cpp_a7ba836ca8fdf8b972123013d93e32767.html  template_8cpp_source.html  template_8hpp.html  template_8hpp__dep__incl.map  template_8hpp__dep__incl.md5  template_8hpp_a7ba836ca8fdf8b972123013d93e32767.html  template_8hpp_source.html
docs/html/: dir_000000_000001.html  dir_000002_000001.html  dir_4270bfced15e0e73154b13468c7c9ad9.html  dir_4270bfced15e0e73154b13468c7c9ad9_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  files_dup.js  globals.html  globals_func.html  graph_legend.html  index.html  index.js  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  main_8cpp_a8216c1645620cdb2f629cde3ac02ffef.html  main_8cpp_source.html  navtreeindex0.js  readme_8md.html  template_8cpp.html  template_8cpp.js  template_8cpp__incl.map  template_8cpp__incl.md5  template_8cpp_a7ba836ca8fdf8b972123013d93e32767.html  template_8cpp_source.html  template_8hpp.html  template_8hpp.js  template_8hpp_a7ba836ca8fdf8b972123013d93e32767.html  template_8hpp_source.html
docs/html/search/: all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  files_2.js  functions_1.js
docs/search/: all_0.js  all_1.js  pages_0.js  pages_2.js  searchdata.js
doxygen/: Doxyfile.in  header.html
include/: template.hpp
src/: CMakeLists.txt  template.cpp
